# ssf2-to-fraymakers

./: .gitignore  AGENT_CONTEXT.md  Cargo.toml  DEV_NOTES.md  JPEXS_WORKFLOW.md  README.md  SSF2_TO_FRAYMAKERS_API.md  anim_split_rules.json  build-app.sh  extract_costumes.py  mario_anim_splits.json  mario_label_map.json
SSF2ConverterApp/: Package.swift
SSF2ConverterApp/.build/: build.db  plugin-tools.yaml
characters/bandanadee/: AnimationStats.hx  CharacterStats.hx  HitboxStats.hx  Script.hx
characters/blackmage/: AnimationStats.hx  CharacterStats.hx  HitboxStats.hx  Script.hx
characters/bomberman/: AnimationStats.hx  CharacterStats.hx  HitboxStats.hx  Script.hx
characters/bowser/: AnimationStats.hx  CharacterStats.hx  HitboxStats.hx  Script.hx
characters/captain/: captain.fraytools  conversion_stats.json
characters/captainfalcon/: AnimationStats.hx  CharacterStats.hx  HitboxStats.hx  Script.hx  conversion_stats.json
characters/chibirobo/: AnimationStats.hx  CharacterStats.hx  HitboxStats.hx  Script.hx
characters/dairsparkle/: conversion_stats.json  dairsparkle.fraytools
characters/dedede/: HitboxStats.hx  (+3 more)
docs/: anim_split_rules.json
mappings/: README.md  animation_names.json  api_methods.json  character_stats.json  events.json  hitbox_stats.json  manifest.json
scripts/: convert.py  parse_attacks.py
src/: abc_parser.rs  anim_splitter.rs  api_mappings.rs  decompiler.rs  entity_gen.rs  extractor.rs  haxe_gen.rs  image_extractor.rs  lib.rs  main.rs  palette_gen.rs  sound_extractor.rs  sprite_parser.rs  ssf.rs
web/: app.js  index.html  style.css
(+453 files in other folders)
