[package]
name = "ssf2_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
swf = "0.2"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
bytes = "1.0"
byteorder = "1.5"
encoding_rs = "0.8"
